# ble-archive

./: .autocp  18924.c  CMakeLists.txt  README.md  a.out  bombandexplosion.c  duckshistory.c  fastarithmetic.c  main.c  nameparser.c  playground.c  rproba.c  socs1-a.c  socs1-b.c  socs1-c.c  socs1-e.c  socs1-f.c  socs1-g.c  triplekwek.c
DSCFinal/: xytrus.c
DSCH1/: 1  2  3  4  5  problem1.c  problem2.c  problem3.c  problem4.c  problem5.c
DSCH2/: problem1.c  problem1.c~
DSCH3/: 1  KaRtier.txt  KaRtier.txt~  problem1.c
DSCH4/: a.out  problem1.c  transactions.txt  users.txt
DSCH5/: 1  a.out  dataset.txt  patient_name.txt  problem1.c
DSCH6/: portaudio.h  problem1.c
fifthweek/: a.c  b.c  c.c  d.c  e.c  f.c
fourthweek/: a  a.c  b  b.c  c  c.c  d  d.c  e.c  f  f.c
java/dayfive/: pom.xml
java/dayfour/: pom.xml
java/dayone/: pom.xml
java/daysix/: pom.xml
java/daythree/: pom.xml  trainees.txt
java/daytwo/: pom.xml
java/final/: inventory.txt  pom.xml  restaurant.txt  run-windows.bat
java/final/.metadata/: version.ini
java/final/.metadata/.mylyn/.taskListIndex/: segments_1
java/final/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
java/final/.metadata/.plugins/org.eclipse.jdt.ui/: dialog_settings.xml
java/final/.metadata/.plugins/org.eclipse.m2e.core.ui/: dialog_settings.xml
slc/: 1  2  3  4  6  a  akmal  akmal.c  b  prog 60 case 1.c  prog 60 case 2.c  prog 60 case 3.c  prog 60 case 4.c  prog 60 case 5.c  prog 90 case 1.c
yeah/: a  a.c  b  b.c  c  c.c  d  d.c  e  e.c  f  f.c  g  g.c  run.sh
(+111 files in other folders)
